# IMSProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  hexagonGUI.cpp  main.cpp  window.cpp
src/: battle.cpp  battle.hpp  hexagonField.cpp  hexagonField.hpp  hexagonGUI.cpp  hexagonGUI.hpp  main.cpp  text.cpp  text.hpp  window.cpp  window.hpp
src/include/: hexagonGUI.hpp  window.h  window.hpp
src/test/: battle_test.cpp
